syntax = "proto3";

option java_package = "com.huangsuip.netty.protobuf";
option java_outer_classname ="MessagePackageProto";

import "google/protobuf/any.proto";
import "header.proto";

message MessagePackage{

    Header header = 1;
    google.protobuf.Any body = 2;

}